# src/main/resources/api/openapi.yml
@@ -1,4 +1,4 @@
-openapi: 3.0.1
+openapi: 3.1.0
 info:
   title: api-e-signing
   contact: { }
@@ -7,7 +7,7 @@ info:
     url: https://opensource.org/licenses/MIT
   version: "2.0"
 servers:
-  - url: http://localhost:52056
+  - url: http://localhost:51847
     description: Generated server url
 tags:
   - name: eSigning
@@ -77,169 +77,195 @@ paths:
 components:
   schemas:
     Document:
-      required:
-        - fileName
-        - registrationNumber
       type: object
+      description: Document model
       properties:
         descriptiveName:
           type: string
           description: Optional descriptive name for the document that is to be signed.
-          example: Employment contract
+          examples:
+            - Employment contract
         registrationNumber:
-          minLength: 1
           type: string
           description: "The document registration number, the value must not be blank\
             \ or null"
-          example: 12345-2022
-        fileName:
+          examples:
+            - 12345-2022
           minLength: 1
+        fileName:
           type: string
           description: "The document file name, the value must not be blank or null"
-          example: document.pdf
-      description: Document model
+          examples:
+            - document.pdf
+          minLength: 1
+      required:
+        - fileName
+        - registrationNumber
     Initiator:
+      type: object
+      description: Initiator model
+      properties:
+        name:
+          type: string
+          description: The initiator name
+          examples:
+            - John Doe
+          minLength: 1
+        partyId:
+          type: string
+          description: The initiator party id
+          examples:
+            - 550e8400-e29b-41d4-a716-446655440000
+        organization:
+          type: string
+          description: The initiator organization
+          examples:
+            - Sundsvall Municipality
+        email:
+          type: string
+          format: email
+          description: The initiator email
+          examples:
+            - john.doe@sundsvall.se
       required:
         - email
         - name
         - partyId
-      type: object
-      properties:
-        name:
-          minLength: 1
-          type: string
-          description: The initiator name
-          example: John Doe
-        partyId:
-          type: string
-          description: The initiator party id
-          example: 550e8400-e29b-41d4-a716-446655440000
-        organization:
-          type: string
-          description: The initiator organization
-          example: Sundsvall Municipality
-        email:
-          type: string
-          description: The initiator email
-          format: email
-          example: john.doe@sundsvall.se
-      description: Initiator model
     Message:
+      type: object
+      description: Message model
+      properties:
+        subject:
+          type: string
+          description: Subject of the message
+          examples:
+            - Please sign the document
+          minLength: 1
+        body:
+          type: string
+          description: Body of the message
+          examples:
+            - "Dear John Doe, please sign the document."
+          minLength: 1
       required:
         - body
         - subject
-      type: object
-      properties:
-        subject:
-          minLength: 1
-          type: string
-          description: Subject of the message
-          example: Please sign the document
-        body:
-          minLength: 1
-          type: string
-          description: Body of the message
-          example: "Dear John Doe, please sign the document."
-      description: Message model
     Reminder:
+      type: object
+      description: Reminder model
+      properties:
+        message:
+          $ref: "#/components/schemas/Message"
+          description: The reminder message
+        intervalInHours:
+          type: integer
+          format: int32
+          description: The reminder interval in hours
+          examples:
+            - "24"
+          minimum: 1
+        startDateTime:
+          type: string
+          format: date-time
+          description: The reminder start date and time
+          examples:
+            - 2021-12-31T23:59:59Z
       required:
         - intervalInHours
         - message
         - startDateTime
-      type: object
-      properties:
-        message:
-          $ref: "#/components/schemas/Message"
-        intervalInHours:
-          minimum: 1
-          type: integer
-          description: The reminder interval in hours
-          format: int32
-          example: 24
-        startDateTime:
-          type: string
-          description: The reminder start date and time
-          format: date-time
-          example: 2021-12-31T23:59:59Z
-      description: Reminder model
     Signatory:
+      type: object
+      description: Signatory model
+      properties:
+        name:
+          type: string
+          description: The signatory name
+          examples:
+            - John Doe
+          minLength: 1
+        organization:
+          type: string
+          description: The signatory organization
+          examples:
+            - Sundsvall Municipality
+        partyId:
+          type: string
+          description: The signatory party id
+          examples:
+            - 550e8400-e29b-41d4-a716-446655440000
+        email:
+          type: string
+          format: email
+          description: The signatory email
+          examples:
+            - john.doe@sundsvall.se
+          minLength: 1
+        notificationMessage:
+          $ref: "#/components/schemas/Message"
+          description: The notification message
       required:
         - email
         - name
         - partyId
-      type: object
-      properties:
-        name:
-          minLength: 1
-          type: string
-          description: The signatory name
-          example: John Doe
-        organization:
-          type: string
-          description: The signatory organization
-          example: Sundsvall Municipality
-        partyId:
-          type: string
-          description: The signatory party id
-          example: 550e8400-e29b-41d4-a716-446655440000
-        email:
-          minLength: 1
-          type: string
-          description: The signatory email
-          format: email
-          example: john.doe@sundsvall.se
-        notificationMessage:
-          $ref: "#/components/schemas/Message"
-      description: Signatory model
     SigningRequest:
-      required:
-        - document
-        - initiator
-        - notificationMessage
-        - signatories
       type: object
+      description: Signing request model
       properties:
         language:
           type: string
           description: "The language used for the signing instance. Valid values are\
             \ one of [en-US, sv-SE, da-DK, fr-FR, de-DE, nb-NO, ru-RU, zh-CN, fi-FI,\
             \ uk-UA]. Swedish will be used If no language is provided"
-          example: sv-SE
+          examples:
+            - sv-SE
         callbackUrl:
           type: string
           description: Optional callback url
-          example: https://example.com/callback
+          examples:
+            - https://example.com/callback
         expires:
           type: string
+          format: date-time
           description: "Optional date and time when the signing request expires. If\
             \ no exipre date is provided, expiretime will be set to 30 days from time\
             \ when request was received."
-          format: date-time
-          example: 2021-12-31T23:59:59Z
+          examples:
+            - 2021-12-31T23:59:59Z
         document:
           $ref: "#/components/schemas/Document"
+          description: The document to sign
         initiator:
           $ref: "#/components/schemas/Initiator"
+          description: The initiator of the signing request
         notificationMessage:
           $ref: "#/components/schemas/Message"
+          description: The notification message
         reminder:
           $ref: "#/components/schemas/Reminder"
+          description: Reminder object
         signatories:
-          minItems: 1
-          uniqueItems: true
           type: array
           items:
             $ref: "#/components/schemas/Signatory"
-      description: Signing request model
+            minItems: 1
+            uniqueItems: true
+          minItems: 1
+          uniqueItems: true
+      required:
+        - document
+        - initiator
+        - notificationMessage
+        - signatories
     Problem:
       type: object
       properties:
+        status:
+          $ref: "#/components/schemas/StatusType"
         title:
           type: string
         detail:
           type: string
-        status:
-          $ref: "#/components/schemas/StatusType"
         instance:
           type: string
           format: uri
@@ -248,8 +274,7 @@ components:
           format: uri
         parameters:
           type: object
-          additionalProperties:
-            type: object
+          additionalProperties: { }
     StatusType:
       type: object
       properties:
@@ -305,8 +330,7 @@ components:
           format: uri
         parameters:
           type: object
-          additionalProperties:
-            type: object
+          additionalProperties: { }
         suppressed:
           type: array
           items:
@@ -343,8 +367,7 @@ components:
     ThrowableProblem:
       type: object
       properties:
-        cause:
-          $ref: "#/components/schemas/ThrowableProblem"
+        cause: { }
         stackTrace:
           type: array
           items:
@@ -369,12 +392,12 @@ components:
                 type: boolean
         message:
           type: string
+        status:
+          $ref: "#/components/schemas/StatusType"
         title:
           type: string
         detail:
           type: string
-        status:
-          $ref: "#/components/schemas/StatusType"
         instance:
           type: string
           format: uri
@@ -383,8 +406,7 @@ components:
           format: uri
         parameters:
           type: object
-          additionalProperties:
-            type: object
+          additionalProperties: { }
         suppressed:
           type: array
           items:
